2022-02-13 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Improve genPointerSet. Make comments formatting more consistent.
	* sdcc/support/regression/Makefile.in,
	  sdcc/support/regression/ports/uc6502-stack-auto/spec.mk,
	  sdcc/support/regression/ports/uc6502-stack-auto/support.c,
	  sdcc/support/regression/ports/uc6502-stack-auto/uCsim.cmd,
	  sdcc/support/regression/ports/uc6502-stack-auto:
	  Add regression for mos6502-stack-auto target.

2022-02-20 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/gen.c:
	  Improve stack cleaning before jp (hl) on sm83.

2022-02-13 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Replace assembly with generic code in a few places.

2022-02-19 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/device/lib/mos6502/Makefile.in,
	  sdcc/device/lib/mos6502/__sdcc_indirect_jsr.s,
	  sdcc/device/lib/mos6502-stack-auto/Makefile.in,
	  sdcc/device/lib/mos6502-stack-auto/__sdcc_indirect_jsr.s,
	  sdcc/src/mos6502/gen.c:
	  Add runtime support for indirect jsr.
	* sdcc/src/mos6502/peeph.def:
	  Refactored rules and improved asm inline comments.
	* sdcc/src/mos6502/gen.c:
	  Changed return type for smallAdjustReg().

2022-02-19 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/devicel/lib/mos6502/crt0.s:
	  Remove incorrect loading of the second memset parameter.
  	* sdcc/support/regression/ports/u6502/spec.mk:
	  Remove redundant --out-fmt-ihx parameter.
  	* sdcc/device/lib/mos6502-stack-auto/Makefile.in,
  	  sdcc/device/lib/mos6502-stack-auto/crt0.s,
  	  sdcc/device/lib/mos6502-stack-auto/atomic_flasg_test_and_set.c,
  	  sdcc/device/lib/mos6502-stack-auto/_setjmp.c,
  	  sdcc/device/lib/mos6502-stack-auto/_rrulonglong.c,
  	  sdcc/device/lib/mos6502-stack-auto/_rrslonglong.c,
  	  sdcc/device/lib/mos6502-stack-auto/_ret.c,
  	  sdcc/device/lib/mos6502-stack-auto/,
  	  sdcc/device/lib/Makefile.in,
  	  sdcc/device/lib/clean.mk,
  	  sdcc/configure.ac,
  	  sdcc/configure.ac:  	  